--- a/css/main.scss
+++ b/css/main.scss
@@ -6,19 +6,23 @@
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-family: 'EB Garamond', serif;
+$base-font-size:   1.2em;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit:     1.5em;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
 
-$grey-color:       #828282;
+
+
+$text-color:       #222;
+$background-color: #E6E2D9;
+$brand-color:      #b6321c;
+//$brand-color:      #2a7ae2;
+
+$grey-color:       #6e6563;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
