--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,10 @@
     ga('send', 'pageview');
 
   </script>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
   <div class="wrapper">
 
     <h2 class="footer-heading">{{ site.title }}</h2>
