--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,9 @@ layout: default
   </header>
 
   <div class="post-content">
+    <div class="container">
     {{ content }}
+  </div>
   </div>
 
 </article>
