--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,9 @@ layout: default
   </header>
 
   <div class="post-content" itemprop="articleBody">
+    <div class="container">
     {{ content }}
+  </div>
   </div>
 
 </article>
