--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,9 +10,9 @@
 
   </script>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="/javascript/jquery-1.10.2.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
+  <script src ="/javascript/bootstrap.min.js"></script>
   <div class="wrapper">
 
     <h2 class="footer-heading">{{ site.title }}</h2>
