--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,15 @@
-<header class="site-header">
+<div class="masthead">
+    <div class="container">
 
+        <div class="row">
+            <div class="col-xs">Content goes here</div>
+
+        </div>
+    </div>
+
+</div>
+
+<header class="site-header">
   <div class="wrapper">
 
     <nav class="site-nav">
@@ -17,18 +27,13 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
           <li><a href="/about/index.html">About</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Professional Activities<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+              <li><a href="/resume/">Resume</a></li>
+              <li><a href="/presentations/">Presentations</a></li>
+              <!-- <li><a href="/projects/">Projects</a></li> -->
             </ul>
           </li>
         </ul>
@@ -38,5 +43,4 @@
     </nav>
 
   </div>
-
 </header>
