--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,6 +28,7 @@
         <ul class="nav navbar-nav">
           <li><a href="/resume/">Resume</a></li>
           <li><a href="/presentations/">Presentations</a></li>
+          <li><a href="/blog/">Blog</a></li>
         </ul>
       </div>
     </div>
